[package]
name = "phala-node-runtime"
version = "2.0.0"
authors = ["Phala Network"]
edition = "2018"
build = "build.rs"
license = "Apache-2.0"
homepage = "https://phala.network/"
repository = "https://github.com/Phala-Network/phala-blockchain"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# third-party dependencies
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
serde = { version = "1.0.102", optional = true }
static_assertions = "1.1.0"
hex-literal = { version = "0.3.1", optional = true }

# primitives
sp-authority-discovery = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-consensus-babe = { version = "0.8.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-block-builder = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-inherents = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
node-primitives = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-offchain = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-core = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-std = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-api = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-staking = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keyring = { version = "2.0.0", optional = true, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-session = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-transaction-pool = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-version = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }

# frame dependencies
frame-executive = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
frame-benchmarking = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", optional = true, branch = "master" }
frame-support = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
frame-system = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
frame-system-benchmarking = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", optional = true, branch = "master" }
frame-system-rpc-runtime-api = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-authority-discovery = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-authorship = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-babe = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-balances = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-collective = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-democracy = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-elections-phragmen = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-grandpa = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-im-online = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-indices = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-identity = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-membership = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-multisig = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-offences = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-offences-benchmarking = { version = "2.0.0", git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "master" }
pallet-proxy = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-randomness-collective-flip = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-recovery = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-session = { version = "2.0.0", features = ["historical"], git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-session-benchmarking = { version = "2.0.0", git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "master" }
# pallet-staking = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-staking-reward-curve = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-scheduler = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-society = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-sudo = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-timestamp = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-treasury = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-bounties = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-tips = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-utility = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-transaction-payment = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-transaction-payment-rpc-runtime-api = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-vesting = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }

pallet-staking = { version = "2.0.0", default-features = false, path = "../pallets/staking", package = "phala-staking" }
pallet-phala = { version = "2.0.0", default-features = false, path = "../pallets/phala", package = "pallet-phala" }
pallet-claim = { version = "2.0.0", default-features = false, path = "../pallets/claim", package = "pallet-claim" }

native-nostd-hasher = { version = "2.0.0", path = "../native-nostd-hasher", optional = true }

cumulus-runtime = { git = "https://github.com/paritytech/cumulus",  default-features = false, branch = "master" }
cumulus-parachain-upgrade = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "master" }
cumulus-primitives = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "master" }
cumulus-message-broker = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "master" }
parachain-info = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "master" }

[build-dependencies]
substrate-wasm-builder = { version = "3.0.0", package = "substrate-wasm-builder", git = "https://github.com/paritytech/substrate", branch = "master" }

[dev-dependencies]
sp-io = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }

[features]
default = ["std", "include-wasm"]
include-wasm = []
native-nostd = ["native-nostd-hasher"]
with-tracing = [ "frame-executive/with-tracing" ]
std = [
	"sp-authority-discovery/std",
	"pallet-authority-discovery/std",
	"pallet-authorship/std",
	"sp-consensus-babe/std",
	"pallet-babe/std",
	"pallet-balances/std",
	"sp-block-builder/std",
	"codec/std",
	"pallet-collective/std",
	"pallet-democracy/std",
	"pallet-elections-phragmen/std",
	"frame-executive/std",
	"pallet-grandpa/std",
	"pallet-im-online/std",
	"pallet-indices/std",
	"sp-inherents/std",
	"pallet-membership/std",
	"pallet-multisig/std",
	"pallet-identity/std",
	"pallet-scheduler/std",
	"node-primitives/std",
	"sp-offchain/std",
	"pallet-offences/std",
	"pallet-proxy/std",
	"sp-core/std",
	"pallet-randomness-collective-flip/std",
	"sp-std/std",
	"serde",
	"pallet-session/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-staking/std",
	"sp-keyring",
	"sp-session/std",
	"pallet-sudo/std",
	"frame-support/std",
	"frame-benchmarking/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"pallet-bounties/std",
	"pallet-tips/std",
	"sp-transaction-pool/std",
	"pallet-utility/std",
	"sp-version/std",
	"pallet-society/std",
	"pallet-recovery/std",
	"pallet-vesting/std",
	"pallet-phala/std",
	"pallet-claim/std",
	"parachain-info/std",
	#"cumulus-runtime/std",
	"cumulus-parachain-upgrade/std",
	"cumulus-message-broker/std",
	"cumulus-primitives/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-democracy/runtime-benchmarks",
	"pallet-elections-phragmen/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-indices/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-society/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-vesting/runtime-benchmarks",
	"pallet-offences-benchmarking",
	"pallet-session-benchmarking",
	"frame-system-benchmarking",
	"hex-literal",
]
