[package]
name = "substrate-subxt"
version = "0.3.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

license = "GPL-3.0"
readme = "README.md"
description = "Submit extrinsics (transactions) to a substrate node via RPC"
keywords = ["parity", "substrate", "blockchain"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
log = "0.4"
thiserror = "1.0"
futures = "0.1"
jsonrpc-core-client = { version = "14.0", features = ["ws"] }
num-traits = { version = "0.2", default-features = false }
serde = { version = "1.0", features = ["derive"] }
url = "1.7"
parity-scale-codec = { version = "1.1", default-features = false, features = ["derive", "full"] }

# inherents = { package = "sp-inherents", path = "../substrate/primitives/inherents" }

frame-metadata = { path = "../substrate/frame/metadata", package = "frame-metadata" }
frame-support = { path = "../substrate/frame/support", package = "frame-support" }
sp-runtime = { path = "../substrate/primitives/sr-primitives", package = "sp-runtime" }
sp-version = { path = "../substrate/primitives/sr-version", package = "sp-version" }
frame-system = { path = "../substrate/frame/system", package = "frame-system" }
pallet-balances = { path = "../substrate/frame/balances", package = "pallet-balances" }
pallet-contracts = { path = "../substrate/frame/contracts", package = "pallet-contracts" }
pallet-indices = { path = "../substrate/frame/indices", package = "pallet-indices" }
substrate-rpc-api = { path = "../substrate/client/rpc/api", package = "sc-rpc-api" }
sp-rpc = { path = "../substrate/primitives/rpc", package = "sp-rpc" }
sp-core = { path = "../substrate/primitives/core", package = "sp-core" }
txpool-api = { path = "../substrate/primitives/transaction-pool", package = "sp-transaction-pool-api" }

[dev-dependencies]
env_logger = "0.7"
tokio = "0.1"
wabt = "0.9"
node-runtime = { path = "../substrate/bin/node/runtime", package = "node-runtime" }
sp-keyring = { path = "../substrate/primitives/keyring", package = "sp-keyring" }
