[workspace]
members = [".", "client", "proc-macro", "test-node"]

[package]
name = "substrate-subxt"
version = "0.14.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/paritytech/substrate-subxt"
documentation = "https://docs.rs/substrate-subxt"
homepage = "https://www.parity.io/"
description = "Submit extrinsics (transactions) to a substrate node via RPC"
keywords = ["parity", "substrate", "blockchain"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[features]
default = []
client = ["substrate-subxt-client"]

[dependencies]
log = "0.4.13"
thiserror = "1.0.23"
futures = "0.3.10"
jsonrpsee-types = "0.2.0-alpha"
jsonrpsee-ws-client = "0.2.0-alpha"
jsonrpsee-http-client = "0.2.0-alpha"
num-traits = { version = "0.2.14", default-features = false }
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.61"
url = "2.2.0"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive", "full"] }
# temporarily pinning funty via codec -> bitvec until https://github.com/myrrlyn/funty/issues/3
# and https://github.com/bitvecto-rs/bitvec/issues/105 are resolved
funty = "=1.1.0"
dyn-clone = "1.0.4"

frame-metadata = { path = "../substrate/frame/metadata" }
frame-support = { path = "../substrate/frame/support" }
sp-runtime = { path = "../substrate/primitives/runtime" }
sp-version = { path = "../substrate/primitives/version" }
pallet-indices = { path = "../substrate/frame/indices" }
hex = "0.4.2"
sp-std = { path = "../substrate/primitives/std" }
application-crypto = { path = "../substrate/primitives/application-crypto", package = "sp-application-crypto" }
pallet-staking = { path = "../substrate/frame/staking" }

sp-rpc = { path = "../substrate/primitives/rpc" }
sp-core = { path = "../substrate/primitives/core" }
substrate-subxt-client = { path = "client", optional = true }
substrate-subxt-proc-macro = { version = "0.14.0", path = "proc-macro" }

[dev-dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
env_logger = "0.8.2"
frame-system = { path = "../substrate/frame/system" }
pallet-balances = { path = "../substrate/frame/balances" }
sp-keyring = { path = "../substrate/primitives/keyring" }
substrate-subxt-client = { path = "client" }
tempdir = "0.3.7"
test-node = { path = "test-node" }
wabt = "0.10.0"
assert_matches = "1.4.0"
