[workspace]
members = [".", "client", "proc-macro", "test-node"]

[package]
name = "substrate-subxt"
version = "0.15.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/paritytech/substrate-subxt"
documentation = "https://docs.rs/substrate-subxt"
homepage = "https://www.parity.io/"
description = "Submit extrinsics (transactions) to a substrate node via RPC"
keywords = ["parity", "substrate", "blockchain"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[features]
default = ["tokio02"]
client = ["substrate-subxt-client"]
# jsonrpsee http client can be configured to use tokio02 or tokio1.
tokio02 = ["jsonrpsee-http-client/tokio02"]
tokio1 = ["jsonrpsee-http-client/tokio1"]

[dependencies]
async-trait = "0.1.49"
log = "0.4.14"
thiserror = "1.0.24"
futures = "0.3.13"
jsonrpsee-proc-macros = "=0.2.0-alpha.6"
jsonrpsee-ws-client = "=0.2.0-alpha.6"
jsonrpsee-http-client = { version = "=0.2.0-alpha.6", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
url = "2.2.1"
codec = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive", "full"] }
dyn-clone = "1.0.4"

frame-metadata = { path = "../substrate/frame/metadata" }
frame-support = { path = "../substrate/frame/support" }
sp-runtime = { path = "../substrate/primitives/runtime" }
sp-version = { path = "../substrate/primitives/version" }
pallet-indices = { path = "../substrate/frame/indices" }
hex = "0.4.3"
sp-std = { path = "../substrate/primitives/std" }
application-crypto = { path = "../substrate/primitives/application-crypto", package = "sp-application-crypto" }
pallet-staking = { path = "../substrate/frame/staking" }

sp-rpc = { path = "../substrate/primitives/rpc" }
sp-core = { path = "../substrate/primitives/core" }
substrate-subxt-client = { version = "0.7.0", path = "client", optional = true }
substrate-subxt-proc-macro = { version = "0.15.0", path = "proc-macro" }

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
env_logger = "0.8.3"
frame-system = { path = "../substrate/frame/system" }
pallet-balances = { path = "../substrate/frame/balances" }
sp-keyring = { path = "../substrate/primitives/keyring" }
tempdir = "0.3.7"
wabt = "0.10.0"
which = "4.0.2"
assert_matches = "1.5.0"
