[package]
name = "phala-types"
version = "0.1.0"
authors = ["h4x3rotab <h4x3rotab@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", default-features = false, optional = true }
codec = { package = "parity-scale-codec", version = "1.3.6", default-features = false }
sp-core = { version = "2.0.0", default-features = false, path = "../../substrate/primitives/core" }

[features]
default = ["std", "enable_serde"]
std = [
    "serde/std",
    "codec/std",
    "sp-core/full_crypto"
]
enable_serde = [
	"serde/derive",
	"serde/alloc"
]
