[package]
name = "phala-types"
version = "0.3.0"
authors = ["h4x3rotab <h4x3rotab@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", default-features = false, optional = true }
codec = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["full"] }
sp-core = { default-features = false, path = "../../substrate/primitives/core" }
sp-runtime = { default-features = false, path = "../../substrate/primitives/runtime", optional = true }

trie-storage = { path = "../../crates/trie-storage", default-features = false, optional = true  }
phala-mq = { path = "../../crates/phala-mq", default-features = false }

[features]
default = ["std", "pruntime", "enable_serde"]
std = [
	"serde/std",
	"codec/std",
	"full_crypto",
	"sp-runtime/std",
	"trie-storage/serde",
]
enable_serde = [
	"serde/derive",
	"serde/alloc",
]
pruntime = [
	"sp-runtime",
	"trie-storage",
]
sgx = [
    "full_crypto",
]
full_crypto = [
    "sp-core/full_crypto",
]
