[package]
name = "crypto"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-core = { path = "../../substrate/primitives/core", default-features = false, features = ["full_crypto"] }
ring = { version = "0.16.20", default-features = false, features = ["alloc"] }

[dev-dependencies]
rand = "0.7.3"
