[package]
name = "phactory"
version = "0.0.1"
edition = "2018"
resolver = "2"

[dependencies]
log         = "0.4.14"
chrono      = "0.4.19"
base64      = "0.13.0"
num-bigint  = "0.4.0"
ring        = "0.16.20"
rust-crypto = "0.2.36"
rand        = "0.7.3"
regex       = "1.5.4"
yasna       = { git = "https://github.com/Phala-Network/yasna.rs", branch = "phala", features = ["chrono", "bit-vec", "num-bigint"] }
rustls      = { version = "0.19.1", features = ["dangerous_configuration"] }
webpki      = { version = "0.21", features = ["std"] }
bitcoin     = { version = "0.27.0", features = ["use-serde"]}
bitcoin_hashes = { version = "0.10.0", default-features = false }
woothee     = { version = "0.11.0" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"

hex = { version = "0.4", default-features = false, features = ["alloc"] }
hex-literal = "0.3"
anyhow = { version = "1.0", default-features = false }
thiserror = { version = "1.0", default-features = false }
bit-vec = { version = "0.6.3", default-features = false }
itertools = { version = "0.10.1", default-features = false }
lazy_static = { version = "1.4.0", default-features = false }

phala-trie-storage = { path = "../phala-trie-storage", default-features = false }
phala-mq = { path = "../phala-mq" }

phala-crypto = { path = "../phala-crypto", features = ["getrandom"] }
prpc = { path = "../prpc" }
pink = { path = "../pink" }

sp-io                = { path = "../../substrate/primitives/io", features = ["disable_panic_handler", "disable_oom", "disable_allocator"] }
sp-runtime-interface = { path = "../../substrate/primitives/runtime-interface", features = ["disable_target_static_assertions"] }
sp-runtime           = { path = "../../substrate/primitives/runtime" }
sp-externalities     = { path = "../../substrate/primitives/externalities" }
parity-scale-codec   = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive", "full", "chain-error"] }
scopeguard   = { version = "1.1", default-features = false }

# Phala specific
runtime = { path = "../../standalone/runtime", package = "phala-node-runtime" }
phala-pallets = { path = "../../pallets/phala", default-features = false }
pallet-kitties = { path = "../../pallets/kitties", default-features = false }
bridge-transfer = { package = "pallet-bridge-transfer", path = "../../pallets/bridge_transfer", default-features = false }
phala-types = { path = "../phala-types", default-features = false, features = ["enable_serde", "pruntime", "sgx"] }
phactory-api = { path = "./api", default-features = false }
phactory-pal = { path = "./pal", default-features = false }

csv-core = { version = "0.1.10", default-features = false }

# for light_validation
derive_more = "0.99.0"
hash-db = { version = "0.15.2", default-features = false }
num = { package = "num-traits", version = "0.2", default-features = false }
finality-grandpa = { version = "0.14", default-features = false, features = ["derive-codec"] }
trie = { package = "sp-trie", path = "../../substrate/primitives/trie" }
frame-system = { package = "frame-system", path = "../../substrate/frame/system" }
sp-finality-grandpa = { package = "sp-finality-grandpa", path = "../../substrate/primitives/finality-grandpa" }
sp-application-crypto = { package = "sp-application-crypto", path = "../../substrate/primitives/application-crypto" }
sp-core = { package = "sp-core", path = "../../substrate/primitives/core"}

fixed = "1.9.0"
fixed-sqrt = "0.2.4"
fixed-macro = { version = "1.1", default-features = false, git = "https://github.com/kvinwang/fixed-macro.git" }

# for diem
# bcs = { path = "../../../diem/vendor/bcs", version = "0.1.2" }
# diem-types = { path = "../../../diem/types", version = "0.1.0" }
# diem-crypto = { path = "../../../diem/crypto/crypto", version = "0.1.0" }
# move-core-types = { path = "../../../diem/language/move-core/types", version = "0.1.0" }
# transaction-builder = { path = "../../../diem/language/transaction-builder", version = "0.1.0"}

# for network service
surf = { version = "2.3.1", default-features = false, features = ["h1-client-rustls"] }
futures = { version = "0.3.17", default-features = false }
async-io = { version = "1.6.0" }
async-executor = { version = "1.4.1" }
async-std = { version = "1.10.0" }
phala-async-executor = { path = '../phala-async-executor' }

# for geo probing
maxminddb = "0.17"

[features]
default = [
    "sp-runtime-interface/disable_target_static_assertions",
    "sp-io/disable_panic_handler",
    "sp-io/disable_oom",
    "sp-io/disable_allocator",
]
